<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="itemSetViewModel"
            type="com.example.triggerisechallenge.viewModels.ItemSetViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin_15"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:contentPadding="@dimen/general_margin_15"
        app:elevation="@dimen/cardview_elevation"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/general_margin_10">

                <TextView
                    style="@style/TitleTextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/name"
                    />

                <TextView
                    style="@style/ValueTextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@{itemSetViewModel.setName}"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/general_margin_10">

                <TextView
                    style="@style/TitleTextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/type"
                    />

                <TextView
                    style="@style/ValueTextAppearance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@{itemSetViewModel.setType}"
                    />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/general_margin_10">

            <Button
                style="@style/ButtonTextAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cards"
                android:onClick="@{itemSetViewModel::cardsOnClick}"
                />

            <Button
                style="@style/ButtonTextAppearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/booster"
                android:onClick="@{itemSetViewModel::boosterOnClick}"
                />

        </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</layout>